<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_bg">

    <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="br.com.fake.steam.LoginActivity">



        <EditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_edittext_bg"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textColorHint="#CCC"
                android:hint="@string/first_name"/>


        <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_edittext_bg"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textColorHint="#CCC"
                android:hint="@string/last_name"/>

        <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/login_edittext_bg"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textColorHint="#CCC"
                android:hint="@string/email_hint"/>



        <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:background="@drawable/login_edittext_bg"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textColorHint="#CCC"
                android:hint="@string/password_hint"/>


        <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_button_bg"
                android:text="@string/create_account"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="70dp"/>



    </LinearLayout>

</ScrollView>